--- a/weapp/package.json
+++ b/weapp/package.json
@@ -5,8 +5,9 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "./node_modules/.bin/wepy build --watch --log trace",
+    "dev2": "./node_modules/.bin/wepy build --watch",
     "build": "cross-env NODE_ENV=production ./node_modules/.bin/wepy build --no-cache",
-    "clean": "rm -rf weapp",
+    "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "wepy": {
@@ -18,6 +19,7 @@
   "dependencies": {
     "@wepy/core": "^2.0.0-alpha.16",
     "@wepy/x": "^2.0.2",
+    "miniprogram-api-promise": "^1.0.4",
     "miniprogram-slide-view": "0.0.3",
     "moment": "^2.27.0",
     "wepy": "^1.7.2"
@@ -30,15 +32,26 @@
     "@wepy/compiler-babel": "^2.0.1",
     "@wepy/compiler-less": "^2.0.1",
     "babel-eslint": "^7.2.1",
+    "consolidate": "^0.16.0",
     "cross-env": "^5.1.3",
+    "download": "^8.0.0",
+    "download-git-repo": "^3.0.2",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^7.1.0",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
-    "less": "^3.8.1",
+    "handlebars": "^4.7.6",
+    "less": "^3.12.2",
+    "log": "^6.0.0",
+    "metalsmith": "^2.3.0",
     "moment": "^2.27.0",
+    "multimatch": "^4.0.0",
+    "ncp": "^2.0.0",
+    "npmlog": "^4.1.2",
+    "tildify": "^2.0.0",
+    "wepy-compiler-babel": "^1.5.3",
     "wepy-compiler-less": "^1.3.14",
     "wepy-eslint": "^1.5.3"
   }
