--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www.js"
+    "start": "node ./bin/www.js",
+    "pm2":"pm2 start ./bin/www.js",
+    "pm2:restart":"pm2 restart ./bin/www.js",
+    "pm2:stop":"pm2 stop ./bin/www.js",
+    "pm2:del":"pm2 del ./bin/www.js"
   },
   "author": "",
   "license": "ISC",
