--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "http-errors": "^1.8.0",
+    "images": "^3.2.3",
     "morgan": "^1.10.0",
     "multiparty": "^4.2.2",
     "opn": "^6.0.0",
@@ -37,6 +38,7 @@
     "gm": "^1.23.1",
     "graphicsmagick": "^0.0.1",
     "imageinfo": "^1.0.4",
-    "imagemagick": "^0.1.3"
+    "imagemagick": "^0.1.3",
+    "webp-converter": "^2.3.1"
   }
 }
