--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "imageinfo": "^1.0.4",
     "imagemagick": "^0.1.3",
     "mysql": "^2.18.1",
-    "webp-converter": "^2.3.1"
+    "webp-converter": "^2.3.1",
+    "xmlreader": "^0.2.3"
   }
 }
